# learn-opengl

./: CMakeLists.txt  main.cpp  ogl.cpp  ogl.hpp  platform.cpp  platform.hpp
res/: basic.frag  basic.vert
